# dependabot-poetry-multiple-constraints

./: .gitignore  pyproject.toml
.github/: dependabot.yml
src/mypkg/: __init__.py
