
[tool.poetry]
name = "mypkg"
version = "0.1.0.dev0"
description = "Test dependabot packaging package"
authors = ["Dominik Gresch"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = [
    {version = ">=1.15,<1.22", python = ">=3.7,<3.8"},
    {version = ">=1.22", python = ">=3.8,<3.11"}
]
wheel = "0.37.0"

[build-system]
requires = ["poetry-core>=1.0.0,<1.3"]
build-backend = "poetry.core.masonry.api"
